2003-06-02  Dennis Cranston <dennis_cranston at yahoo com>

	* geyes.[ch]: Center the geyes image on the panel.
 
2003-06-02  Kevin Vandersloot

	* geyes.c: expand for Fitt's law.

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* themes.c:  HIGify the action area of the preferences dialog.  

2003-05-12  Kevin Vandersloot <kfv101@psu.edu>

	* themes.c: work on systems not supporting PATH_MAX. Patch by
	Christian Marillat. Fixes part of bug #111466

2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>

	* themes.c:  More HIGification of the preferences dialog: adds 
	a proper mnemonic label to the listview.

2003-04-21  Dennis Cranston <dennis_cranston at yahoo com>

	* themes.c:  HIGify the preference dialog.

2003-04-21  Kevin Vandersloot <kfv101@psu.edu>

	* themes.c: fix small memory leak from previous patch. Thanks to Pasupathi
	Duraisamy.

2003-04-19  Kevin Vandersloot <kfv101@psu.edu>

	* geyes.c: themes.c: handle theme directories not configuree properly. Fixes bug
	#110852

2003-03-22  Kevin Vandersloot <kfv101@psu.edu>

	* geyes.c: another optimization. Don't update the applet if the cursor hasn't moved.

2003-03-15  Kevin Vandersloot <kfv101@psu.edu>

	* geyes.c: small optimization of display and use GtkImage to get rid
	of flashing.

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* geyes.c: (help_cb):
	* themes.c: (phelp_cb): update for screen-exec changes.

2003-01-21  Arvind Samptur <arvind.samptur@wipro.com>
	* geyes.c (destroy_cb): Destroy the preferences dialog
	when the applet is destroyed.

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_GeyesApplet.server.in.in: added bugzilla attributtes

2002-10-29  Rajkumar Sivasamy  <rajkumar.siva@wipro.com>

	* themes.c: Change the preferences list's mnemonic 
	to <Alt>+T. Fixes #92483

2002-09-24  Muktha  <muktha.narayan@wipro.com>
	
	* themes.c: add colon at the end of 'Theme Name'
	label. Fixes #94035.

2002-09-20  Mark McLoughlin  <mark@skynet.ie>
