@@ -1,3 +1,7 @@
+Thu Jul 03 15:58:56 2003  George Lebl <jirka@5z.com>
+
+	* themes.c: key-writability for theme_path preference
+
 2003-06-02  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* geyes.[ch]: Center the geyes image on the panel.
